--- a/about.Rmd
+++ b/about.Rmd
@@ -2,4 +2,6 @@
 title: "About Me"
 ---
 
-Why I am awesome. 
+Submitter: Tianming<br/>
+Date: Jan 22, 2021<br/>
+Github repo: https://github.com/timmy1027/PML.github.io
